--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
+    "build": "node -e \"console.log('No backend build step')\"",
     "start": "node src/server.js"
   },
   "keywords": [],
