--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ DB_PASSWORD=change_me
 DB_NAME=taxi_db
 
 JWT_SECRET=replace_with_long_random_secret
-CORS_ORIGIN=http://localhost:5173
-COOKIE_SECURE=false
-COOKIE_SAMESITE=lax
+CORS_ORIGIN=http://localhost:5173,https://versa-reg.eu
+COOKIE_SECURE=true
+COOKIE_SAMESITE=none
 
 SMTP_HOST=
 SMTP_PORT=587
